[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/titles/title.png" type="Texture" id=1]
[ext_resource path="res://sprites/optionsButtonNewSelect.png" type="Texture" id=2]
[ext_resource path="res://sprites/playButtonNewSelect.png" type="Texture" id=3]
[ext_resource path="res://sprites/playButtonNew.png" type="Texture" id=4]
[ext_resource path="res://sprites/optionsButtonNew.png" type="Texture" id=5]
[ext_resource path="res://scripts/MenuManagement.gd" type="Script" id=6]
[ext_resource path="res://sounds/thegoofiestbeatLOOPED.mp3" type="AudioStream" id=7]
[ext_resource path="res://sprites/menubackground.png" type="Texture" id=8]
[ext_resource path="res://scenes/Fader.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Rockyy (stupid fucking idiot moron ass two headed dildo owning bitch).gd" type="Script" id=10]
[ext_resource path="res://sprites/creditmenu.png" type="Texture" id=11]
[ext_resource path="res://sprites/Sombrero.png" type="Texture" id=12]
[ext_resource path="res://sounds/LETSGOOOO.mp3" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 173.64, 38.3333 )

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="goofyahhbeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="elsondito" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -7.0
margin_top = -183.0
margin_right = 1033.0
margin_bottom = 643.0
texture = ExtResource( 8 )
expand = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 530, 221 )
rotation = -0.261799
scale = Vector2( 2.28, 2.28 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
playback_speed = 3.1
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Title"]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title/Area2D"]
position = Vector2( -1.71053, 0.263161 )
shape = SubResource( 3 )

[node name="Sombrero" type="Sprite" parent="Title"]
visible = false
position = Vector2( -161.842, -29.8246 )
rotation = -0.439454
scale = Vector2( 0.102625, 0.102625 )
texture = ExtResource( 12 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 409.0
margin_top = 342.0
margin_right = 637.0
margin_bottom = 433.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 409.0
margin_top = 459.0
margin_right = 637.0
margin_bottom = 550.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true

[node name="info" type="TextureButton" parent="."]
margin_left = 946.0
margin_top = 522.0
margin_right = 1014.0
margin_bottom = 590.0
texture_normal = ExtResource( 11 )
expand = true

[node name="Fader" parent="." instance=ExtResource( 9 )]
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="Title/Area2D" to="Title/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Title/Area2D" to="Title/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="PlayButton" to="Fader" method="_on_PlayButton_button_up"]
[connection signal="button_up" from="OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="info" to="." method="_on_info_button_up"]
[connection signal="finished" from="Fader" to="." method="_on_Fader_finished"]
